--- a/styles/general.css
+++ b/styles/general.css
@@ -11,4 +11,8 @@ body {
   padding-left: 96px;
   padding-right: 24px;
   background-color: rgb(248, 248, 248);
+  background-image: url('one.png');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 }
