--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -27,7 +27,7 @@
 .sidebar-link img {
   height: 24px;
   margin-bottom: 4px;
-  filter: invert(48%) sepia(79%) saturate(2476%) hue-rotate(86deg) brightness(118%) contrast(119%);
+  filter: invert(58%) sepia(100%) saturate(1063%) hue-rotate(358deg) brightness(99%) contrast(99%)
 }
 
 .sidebar-link div {
