--- a/styles/general.css
+++ b/styles/general.css
@@ -1,6 +1,19 @@
 p {
   margin-top: 0;
   margin-bottom: 0;
+  color:aliceblue
+}
+.p2 {
+  padding-right: 35px;
+  /* padding-top: 5px; */
+  font-family: "Lucida Console", "Courier New", monospace;
+  color: rgb(169, 175, 184);
+  /* font-weight: bold; */
+}
+
+.p3 {
+  font-family: "Lucida Console", "Courier New", monospace;
+  /* font-weight: bold; */
 }
 
 
@@ -15,8 +28,27 @@ body {
   overflow-y:scroll;
   background-color: rgb(54, 54, 60);
 }
+
+.text
+{
+  /* position:absolute;
+  top: 0px;
+  left: 0px; */
+  padding-top: 65px;
+  width: 100%; 
+  /* height: 100vh; */
+}
+/* .cows */
+/* { */
+  /* position:absolute;
+  top: 0px;
+  left: 0px; */
+  /* padding-top: 50px; */
+  /* width: 100%;  */
+  /* height: 100vh; */
+/* } */
 .main {
-  background-color: rgb(54, 54, 60);
+  background-color: rgb(31, 31, 41);
   /* background-image: url('radar.png'); */
   /* background-repeat: no-repeat;
   background-attachment: fixed;
@@ -26,8 +58,8 @@ body {
   position: relative
 }
 .main1 {
-  background-color: black; 
+  background-color: rgb(26, 25, 24); 
   width: 100%; 
-  height: 100vh;
+  height: 110vh;
   position: relative
 }
