--- a/styles/general.css
+++ b/styles/general.css
@@ -10,11 +10,19 @@ p {
   color: rgb(169, 175, 184);
   /* font-weight: bold; */
 }
-
-.p3 {
+.heading {
+  padding-right: 25px;
+  /* right: 0px; */
+  text-align: right;
+  width: 50%;
+  padding-top: 75px;
   font-family: "Lucida Console", "Courier New", monospace;
+  color: rgb(255, 255, 255);
+  float: right;
+  font-size: 35px;
   /* font-weight: bold; */
 }
+
 
 
 body {
@@ -24,11 +32,60 @@ body {
   /* padding-top: 80px;
   padding-left: 96px;
   padding-right: 24px; */
-  height:1000px;
-  overflow-y:scroll;
-  background-color: rgb(54, 54, 60);
+  /* height:1000px; */
+  height: flex;
+  overflow-y: scroll;
+  /* background-color: rgb(54, 54, 60); */
+  background-color: rgb(31, 31, 41);
 }
-
+.colorlayer
+{
+  /* position:absolute;
+  top: 0px;
+  left: 0px; */
+  /* padding-top: 65px; */
+  /* background-color: rgb(157, 94, 0); */
+  background-color: rgba(99, 59, 0, 0.49);
+  /* opacity: .5; */
+  width: 100%; 
+  height: 100%;
+}
+.bluelayer
+{
+  /* position:absolute;
+  top: 0px;
+  left: 0px; */
+  /* padding-top: 65px; */
+  /* background-color: rgb(157, 94, 0); */
+  background-color: rgba(33, 0, 99, 0.49);
+  /* opacity: .5; */
+  width: 100%; 
+  height: 100%;
+}
+.navylayer
+{
+  /* position:absolute;
+  top: 0px;
+  left: 0px; */
+  /* padding-top: 65px; */
+  /* background-color: rgb(157, 94, 0); */
+  background-color: rgb(31, 31, 41);
+  /* opacity: .5; */
+  width: 100%; 
+  height: 100%;
+}
+.clear
+{
+  /* position:absolute;
+  top: 0px;
+  left: 0px; */
+  /* padding-top: 65px; */
+  /* background-color: rgb(157, 94, 0); */
+  background-color: clear;
+  opacity: 1;
+  width: 100%; 
+  height: 100%;
+}
 .text
 {
   /* position:absolute;
@@ -61,5 +118,30 @@ body {
   background-color: rgb(26, 25, 24); 
   width: 100%; 
   height: 110vh;
+  position: relative
+}
+.main2 {
+  background-color: rgb(26, 25, 24); 
+  width: 100%; 
+  height: 110vh;
+  position: relative
+}
+.main3 {
+  background-color: rgb(26, 25, 24); 
+  width: 100%; 
+  height: 110vh;
+  position: relative
+}
+.main4 {
+  background-color: rgb(26, 25, 24); 
+  width: 100%; 
+  height: 110vh;
+  position: relative
+}
+.footer {
+  background-color: rgb(31, 31, 41);
+  /* background-color: clear ;  */
+  width: 100%; 
+  height: 40vh;
   position: relative
 }
