--- a/styles/header.css
+++ b/styles/header.css
@@ -17,6 +17,7 @@
   border-bottom-color: rgb(228, 228, 228);
   padding-top: 15px;
   padding-right: 15px;
+  
 }
 
 .left-section {
@@ -41,7 +42,7 @@
   /* max-width: 1500px; */
   min-width: 2000;
   display: flex;
- 
+  cursor: pointer;
   /* align-items: center; */
 }
 
